--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <link href="/web-app-manifest-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
 <meta content="#ffffff" name="theme-color"/>
 <meta content="#003366" name="msapplication-TileColor"/>
-<meta charset="utf-8">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Пламен Моллов – Преводачески услуги с гръцки език в Пловдив – устни, писмени преводи, заверка и легализация на документи</title>
 <style>
 
@@ -273,7 +273,7 @@ a:active {
   transform: scale(0.96);
 }
 </style>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical">
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
 <meta content="Пламен Моллов – Преводи от и на гръцки език" property="og:title"/>
 <meta content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." property="og:description"/>
 <meta content="https://www.prevodigr.eu/assets/images/logo.webp" property="og:image"/>
@@ -309,11 +309,10 @@ a:active {
   font-display: swap;
 }
 </style>
-<script type="application/ld+json">
-{
+<script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
+  "name": "Преводи от и на гръцки език – Пламен Моллов",
   "image": "https://www.prevodigr.eu/assets/images/logo.webp",
   "url": "https://www.prevodigr.eu",
   "telephone": "+359897098959",
@@ -323,74 +322,22 @@ a:active {
     "streetAddress": "ул. Димитър Талев 132",
     "addressLocality": "Пловдив",
     "postalCode": "4000",
-    "addressCountry": "BG"
+    "addressCountry": "BG",
+    "addressRegion": "Област Пловдив"
   },
   "aggregateRating": {
     "@type": "AggregateRating",
     "ratingValue": "5",
-    "reviewCount": "4"
+    "reviewCount": 4
   },
-  "review": [
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "Мария Димитрова"
-      },
-      "datePublished": "2025-06-15",
-      "reviewBody": "Изключително професионален подход и невероятно качество на преводите.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      }
-    },
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "Дияна Иванова"
-      },
-      "datePublished": "2025-06-10",
-      "reviewBody": "Успях да сключа важен договор в Гърция. Истински мост между културите.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      }
-    },
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "Παρασκευαΐδης Χρήστος"
-      },
-      "datePublished": "2025-05-28",
-      "reviewBody": "Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      }
-    },
-    {
-      "@type": "Review",
-      "author": {
-        "@type": "Person",
-        "name": "Пламен Чингаров"
-      },
-      "datePublished": "2025-05-22",
-      "reviewBody": "Коректни преводачески услуги на достъпни цени. Бих ползвал отново!",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5",
-        "bestRating": "5"
-      }
-    }
+  "@id": "https://www.prevodigr.eu/#business",
+  "sameAs": [
+    "https://www.facebook.com/PlamenMollov",
+    "https://www.linkedin.com/in/plamenmollov",
+    "https://goo.gl/maps/yourgooglemaplink"
   ]
-}
-</script>
-</link></meta></meta></head>
+}</script>
+</meta></meta></head>
 <body>
 <header>
 <img alt="Plamen Mollov Logo" fetchpriority="high" src="assets/images/logo.webp"/>
@@ -491,7 +438,6 @@ a:active {
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
 <p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
-
 <style>
 @keyframes pulseBanner {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
@@ -508,18 +454,16 @@ a:active {
   }
 }
 </style>
-
 <section id="contact">
 <h2 class="section-title">Контакти / Επικοινωνίες</h2>
 <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
 <p>📧 Email: <a href="mailto:info@prevodigr.eu">info@prevodigr.eu</a></p>
 <p>📍 Град: Пловдив, България / πόλη Πλόβντιβ Βουλγαρίας</p>
 <p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
-
 <div style="margin-top: 2rem; display: flex; flex-wrap: wrap; gap: 1rem;">
-  <a href="viber://chat?number=+359897098959" style="background: #665CAC; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Viber</a>
-  <a href="https://wa.me/359897098959" style="background: #075E54; color: #ffffff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">WhatsApp</a>
-  <a href="tel:+359897098959" style="background: #003366; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Позвънете сега / Καλέστε τώρα</a>
+<a href="viber://chat?number=+359897098959" style="background: #665CAC; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Viber</a>
+<a href="https://wa.me/359897098959" style="background: #075E54; color: #ffffff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">WhatsApp</a>
+<a href="tel:+359897098959" style="background: #003366; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Позвънете сега / Καλέστε τώρα</a>
 </div>
 </section>
 <footer>
