--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
+
 <html lang="bg">
 <head>
-  <meta charset="UTF-8">
-  <title>Политика за поверителност / Πολιτική απορρήτου</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+<meta charset="utf-8"/>
+<title>Политика за поверителност / Πολιτική απορρήτου</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<style>
     body {
       font-family: 'Segoe UI', sans-serif;
       line-height: 1.7;
@@ -26,31 +27,45 @@
       margin-bottom: 1rem;
     }
   </style>
-</head>
+<script type="application/ld+json">{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Начало",
+      "item": "https://www.prevodigr.eu/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Политика за поверителност",
+      "item": "https://www.prevodigr.eu/privacy.html"
+    }
+  ]
+}</script></head>
 <body>
-  <h1>Политика за поверителност / Πολιτική απορρήτου</h1>
-
-  <h2>1. Защита на личните данни / Προστασία προσωπικών δεδομένων</h2>
-  <p>
+<h1>Политика за поверителност / Πολιτική απορρήτου</h1>
+<h2>1. Защита на личните данни / Προστασία προσωπικών δεδομένων</h2>
+<p>
     Ние се ангажираме да защитаваме вашата лична информация. Всички данни, предоставени чрез тази форма, ще се използват единствено за обработка на вашата заявка.
   </p>
-  <p>
+<p>
     Δεσμευόμαστε να προστατεύουμε τα προσωπικά σας δεδομένα. Όλες οι πληροφορίες που παρέχονται μέσω αυτής της φόρμας θα χρησιμοποιηθούν αποκλειστικά για την επεξεργασία του αιτήματός σας.
   </p>
-
-  <h2>2. Съхранение на информация / Αποθήκευση πληροφοριών</h2>
-  <p>
+<h2>2. Съхранение на информация / Αποθήκευση πληροφοριών</h2>
+<p>
     Вашите данни няма да бъдат споделяни с трети страни и се съхраняват сигурно за необходимия срок, за да бъде завършена услугата.
   </p>
-  <p>
+<p>
     Τα δεδομένα σας δεν θα κοινοποιηθούν σε τρίτους και θα αποθηκευτούν με ασφάλεια για την απαιτούμενη χρονική περίοδο ώστε να ολοκληρωθεί η υπηρεσία.
   </p>
-
-  <h2>3. Контакт / Επικοινωνία</h2>
-  <p>
+<h2>3. Контакт / Επικοινωνία</h2>
+<p>
     Ако имате въпроси относно нашата политика за поверителност, моля свържете се с нас на: mollovplamen@gmail.com
   </p>
-  <p>
+<p>
     Εάν έχετε ερωτήσεις σχετικά με την πολιτική απορρήτου, επικοινωνήστε μαζί μας στο: mollovplamen@gmail.com
   </p>
 </body>
