--- a/testimonials.html
+++ b/testimonials.html
@@ -354,11 +354,10 @@ a.back-home:hover {
 }
 
 </style>
-<script type="application/ld+json">
-{
+<script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
-  "name": "Преводачески услуги от Пламен Моллов",
+  "name": "Преводи от и на гръцки език – Пламен Моллов",
   "image": "https://www.prevodigr.eu/assets/images/logo.png",
   "url": "https://www.prevodigr.eu",
   "telephone": "+359897098959",
@@ -367,13 +366,14 @@ a.back-home:hover {
     "@type": "PostalAddress",
     "streetAddress": "ул. Димитър Талев 132",
     "addressLocality": "Пловдив",
-      "postalCode": "4000",
-    "addressCountry": "BG"
+    "postalCode": "4000",
+    "addressCountry": "BG",
+    "addressRegion": "Област Пловдив"
   },
   "aggregateRating": {
     "@type": "AggregateRating",
     "ratingValue": "5",
-    "reviewCount": "4"
+    "reviewCount": 4
   },
   "review": [
     {
@@ -428,10 +428,32 @@ a.back-home:hover {
       },
       "datePublished": "2025-07-20"
     }
+  ],
+  "@id": "https://www.prevodigr.eu/#business",
+  "sameAs": [
+    "https://www.facebook.com/PlamenMollov",
+    "https://www.linkedin.com/in/plamenmollov",
+    "https://goo.gl/maps/yourgooglemaplink"
   ]
-}
-</script>
-</head>
+}</script>
+<script type="application/ld+json">{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Начало",
+      "item": "https://www.prevodigr.eu/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Отзиви",
+      "item": "https://www.prevodigr.eu/testimonials.html"
+    }
+  ]
+}</script></head>
 <body>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
@@ -548,9 +570,8 @@ a.back-home:hover {
   </a>
 </div>
 </div>
-
 <div style="text-align: center; margin-top: 2rem;">
-  <a href="index.html" class="back-home" style="
+<a class="back-home" href="index.html" style="
     background-color: #003366;
     color: white;
     padding: 1rem 2rem;
@@ -563,7 +584,6 @@ a.back-home:hover {
     transition: background-color 0.3s ease;
   ">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
 </div>
-
 </section>
 </body>
 </html>
