--- a/testimonials.html
+++ b/testimonials.html
@@ -5,6 +5,13 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Мнения / Αξιολογήσεις</title>
+<!-- Favicon икони за всички устройства -->
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/site.webmanifest" rel="manifest"/>
+<link href="/web-app-manifest-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
+<link href="/web-app-manifest-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
 <style>
 
 /* Оптимизация за рендериране */
