--- a/prices.html
+++ b/prices.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Цени / Τιμές</title>
+<!-- Favicon икони за всички устройства -->
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/site.webmanifest" rel="manifest"/>
+<link href="/web-app-manifest-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
+<link href="/web-app-manifest-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
 <link rel="canonical" href="https://www.prevodigr.eu/prices.html">
 <meta name="description" content="Професионални преводи от и на гръцки език. Писмени и устни преводи, легализация и консултации. Цена: по договаряне.">
 
@@ -43,10 +50,9 @@
   "serviceType": "Преводи и легализация",
   "provider": {
     "@type": "LocalBusiness",
-    "@id": "https://www.prevodigr.eu/#business",
     "name": "Преводи от и на гръцки език – Пламен Моллов",
     "url": "https://www.prevodigr.eu"
-},
+  },
   "offers": [
     { "@type": "Offer", "name": "Писмени преводи", "price": "по договаряне", "priceCurrency": "BGN" },
     { "@type": "Offer", "name": "Устни преводи", "price": "по договаряне", "priceCurrency": "BGN" },
