--- a/prices.html
+++ b/prices.html
@@ -82,7 +82,7 @@ a.back-home:hover {
       display: inline-block;
       animation: scrollText 10s linear infinite;
     ">
-      🇧🇬 Гарантирано най-добрите цени! — 🇬🇷 Εγγυημένα οι καλύτερες τιμές! — 🇧🇬 Гарантирано най-добрите цени! — 🇬🇷 Εγγυημένα οι καλύτερες τιμές!
+      Гарантирано най-добрите цени! — Εγγυημένα οι καλύτερες τιμές! — Гарантирано най-добрите цени! — Εγγυημένα οι καλύτερες τιμές!
     </div>
   </div>
 
