--- a/prices.html
+++ b/prices.html
@@ -39,18 +39,45 @@ a.back-home {
 a.back-home:hover {
   background-color: #0055a5;
 }
+
+:root {
+  --scroll-duration: 20s;
+}
+
 @keyframes scrollText {
   0% { transform: translateX(100%); }
   100% { transform: translateX(-100%); }
 }
+
 @keyframes pulseBanner {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
   50% { transform: scale(1.02); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
   100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
 }
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
+
+#loadingBanner {
+  background: linear-gradient(90deg, #003366, #0055a5);
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.15rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 1rem 0;
+  border-radius: 12px;
+  margin-bottom: 1rem;
+  overflow: hidden;
+  position: relative;
+  animation: pulseBanner 4s infinite;
+}
+
+#scrollingText {
+  white-space: nowrap;
+  display: inline-block;
+  animation: scrollText var(--scroll-duration) linear infinite;
+}
+
+@media (max-width: 768px) {
+  #loadingBanner { font-size: 1rem; padding: 0.9rem 0; }
 }
 </style>
 </head>
@@ -62,31 +89,12 @@ a.back-home:hover {
     <em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
   </p>
 
-  <!-- 🔵 Постоянен анимиран банер -->
-  <div id="loadingBanner" style="
-    background: linear-gradient(90deg, #003366, #0055a5);
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.3rem;
-    font-weight: 700;
-    text-align: center;
-    padding: 1rem 0;
-    border-radius: 12px;
-    margin-bottom: 1rem;
-    overflow: hidden;
-    position: relative;
-    animation: pulseBanner 4s infinite;
-  ">
-    <div id="scrollingText" style="
-      white-space: nowrap;
-      display: inline-block;
-      animation: scrollText 10s linear infinite;
-    ">
-      Гарантирано най-добрите цени! — Εγγυημένα οι καλύτερες τιμές! — Гарантирано най-добрите цени! — Εγγυημένα οι καλύτερες τιμές!
+  <div id="loadingBanner">
+    <div id="scrollingText" aria-live="polite">
+      Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές! — Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές!
     </div>
   </div>
 
-  <!-- 🩵 Постоянен банер над формата -->
   <div id="formBanner" style="
     background: linear-gradient(135deg, #e0f0ff, #ffffff);
     border: 2px solid #0055a5;
@@ -95,7 +103,7 @@ a.back-home:hover {
     text-align: center;
     margin-bottom: 2rem;
     box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
-    animation: pulseBanner 4s infinite, fadeIn 1.5s ease forwards;
+    animation: pulseBanner 4s infinite;
   ">
     <h3 style="font-size: 2rem; font-family: 'Poppins', sans-serif; color: #003366; font-weight: 700; margin-bottom: 1rem;">
       📩 Попълни формата и вземи своята оферта още днес!<br/>
@@ -106,7 +114,6 @@ a.back-home:hover {
     </p>
   </div>
 
-  <!-- 🧾 Формата -->
   <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"
     style="border:none; width:100%; min-height:700px;"
     title="Форма за оферта"></iframe>
