--- a/prices.html
+++ b/prices.html
@@ -42,7 +42,7 @@ a.back-home:hover {
 }
 
 :root {
-  --scroll-duration: 20s;
+  --scroll-duration: 20s; /* Increased the duration */
 }
 
 @keyframes scrollTextDesktop {
@@ -79,13 +79,14 @@ a.back-home:hover {
 #scrollingText {
   white-space: nowrap;
   display: inline-block;
-  animation: scrollTextDesktop var(--scroll-duration) linear infinite;
+  animation: scrollTextMobile 20s linear infinite; /* Increased duration for slower scroll */
+  animation-delay: 0s; /* Starts immediately */
 }
 
 @media (max-width: 768px) {
   #loadingBanner { font-size: 1rem; padding: 0.9rem 0; }
   #scrollingText {
-    animation: scrollTextMobile 10s linear infinite;
+    animation: scrollTextMobile 20s linear infinite; /* Increased duration for slower scroll */
   }
 }
 </style>
