--- a/prices.html
+++ b/prices.html
@@ -7,32 +7,37 @@
 <title>Цени / Τιμές</title>
 <style>
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom, #fff, #f0f8ff);
+  background: linear-gradient(to bottom, #f0f8ff, #ffffff);
   color: #333;
+  font-size: 16px;
 }
+
 section {
-  padding: 2rem;
+  padding: 3rem;
   background-color: white;
-  margin: 1rem;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 2rem;
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
+
 .section-title {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
   color: #003366;
+  font-weight: bold;
 }
+
 a.back-home {
   background-color: #003366;
   color: white;
-  padding: 1rem 2rem;
-  border-radius: 10px;
+  padding: 1rem 2.5rem;
+  border-radius: 25px;
   text-decoration: none;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 600;
   display: inline-block;
   transition: background-color 0.3s ease;
@@ -42,26 +47,26 @@ a.back-home:hover {
 }
 
 @keyframes scrollContinuous {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
 }
 
 @keyframes pulseBanner {
-  0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
-  50% { transform: scale(1.02); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
-  100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
+  0% { transform: scale(1); box-shadow: 0 8px 25px rgba(0, 85, 165, 0.2); }
+  50% { transform: scale(1.05); box-shadow: 0 12px 30px rgba(0, 85, 165, 0.3); }
+  100% { transform: scale(1); box-shadow: 0 8px 25px rgba(0, 85, 165, 0.2); }
 }
 
 #loadingBanner {
   background: linear-gradient(90deg, #003366, #0055a5);
   color: white;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.15rem;
+  font-size: 1.2rem;
   font-weight: 700;
   text-align: center;
-  padding: 1rem 0;
+  padding: 1.2rem 0;
   border-radius: 12px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   overflow: hidden;
   position: relative;
   animation: pulseBanner 4s infinite;
@@ -70,28 +75,32 @@ a.back-home:hover {
 #scrollContainer {
   display: flex;
   white-space: nowrap;
-  animation: scrollContinuous 20s linear infinite;
-  width: 200%;
+  animation: scrollContinuous 30s linear infinite; /* slower, smooth scroll */
+  width: 100%;
 }
 
 #scrollingText {
   display: inline-block;
   white-space: nowrap;
-  width: 50%;
+  width: auto;
+  margin-right: 0;
+  font-weight: 600;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
 }
 
 @media (max-width: 768px) {
-  #loadingBanner { font-size: 1rem; padding: 0.9rem 0; }
+  #loadingBanner {
+    font-size: 1rem;
+    padding: 1rem 0;
+  }
 
-  /* Fix for mobile overlap: Adjust the container for better spacing */
   #scrollContainer {
-    animation: scrollContinuous 25s linear infinite; /* slower scroll */
-    flex-wrap: nowrap;
+    animation: scrollContinuous 35s linear infinite; /* even slower scroll for mobile */
   }
 
   #scrollingText {
-    width: 100%; /* Ensure the text takes full width */
-    margin-right: 20px; /* Add margin to prevent overlap */
+    width: auto;
   }
 }
 </style>
@@ -99,7 +108,7 @@ a.back-home:hover {
 <body>
 <section id="prices">
   <h2 class="section-title">Цени / Τιμές</h2>
-  <p style="text-align: justify;">
+  <p style="text-align: justify; font-size: 1.1rem;">
     <em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
     <em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
   </p>
@@ -119,32 +128,32 @@ a.back-home:hover {
     background: linear-gradient(135deg, #e0f0ff, #ffffff);
     border: 2px solid #0055a5;
     border-radius: 12px;
-    padding: 1.5rem;
+    padding: 2rem;
     text-align: center;
-    margin-bottom: 2rem;
-    box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
+    margin-bottom: 3rem;
+    box-shadow: 0 8px 25px rgba(0, 85, 165, 0.15);
     animation: pulseBanner 4s infinite;
   ">
-    <h3 style="font-size: 2rem; font-family: 'Poppins', sans-serif; color: #003366; font-weight: 700; margin-bottom: 1rem;">
+    <h3 style="font-size: 2.2rem; font-family: 'Poppins', sans-serif; color: #003366; font-weight: 700; margin-bottom: 1.5rem;">
       📩 Попълни формата и вземи своята оферта още днес!<br/>
       📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
     </h3>
-    <p style="font-size: 1.1rem; color: #222;">
+    <p style="font-size: 1.2rem; color: #333;">
       💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική
     </p>
   </div>
 
   <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"
-    style="border:none; width:100%; min-height:700px;"
+    style="border:none; width:100%; min-height:800px;"
     title="Форма за оферта"></iframe>
 
-  <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+  <div style="margin-top: 2rem; font-size: 1rem; text-align: center;">
     🔒 <a href="privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
       Политика за поверителност / Πολιτική απορρήτου
     </a>
   </div>
 
-  <div style="text-align: center; margin-top: 2rem;">
+  <div style="text-align: center; margin-top: 3rem;">
     <a href="index.html" class="back-home">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
   </div>
 </section>
