--- a/prices.html
+++ b/prices.html
@@ -42,7 +42,7 @@ a.back-home:hover {
 }
 
 :root {
-  --scroll-duration: 20s;
+  --scroll-duration: 30s; /* Increased duration to allow full text to move smoothly */
 }
 
 @keyframes scrollTextDesktop {
@@ -82,10 +82,54 @@ a.back-home:hover {
   animation: scrollTextDesktop var(--scroll-duration) linear infinite;
 }
 
+#formBanner {
+  background: linear-gradient(135deg, #e0f0ff, #ffffff);
+  border: 2px solid #0055a5;
+  border-radius: 12px;
+  padding: 1.5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
+  animation: pulseBanner 4s infinite;
+}
+
+#formBanner h3 {
+  font-size: 2rem;
+  font-family: 'Poppins', sans-serif;
+  color: #003366;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+#formBanner p {
+  font-size: 1.1rem;
+  color: #222;
+}
+
+#offerForm {
+  border: none;
+  width: 100%;
+  min-height: 700px;
+}
+
 @media (max-width: 768px) {
   #loadingBanner { font-size: 1rem; padding: 0.9rem 0; }
   #scrollingText {
     animation: scrollTextMobile 10s linear infinite;
+  }
+  #formBanner {
+    width: 100%;
+    padding: 1rem;
+  }
+  #formBanner h3 {
+    font-size: 1.6rem;
+  }
+  #formBanner p {
+    font-size: 1rem;
+  }
+  #offerForm {
+    min-height: 600px;
+    max-width: 100%;
   }
 }
 </style>
@@ -104,28 +148,17 @@ a.back-home:hover {
     </div>
   </div>
 
-  <div id="formBanner" style="
-    background: linear-gradient(135deg, #e0f0ff, #ffffff);
-    border: 2px solid #0055a5;
-    border-radius: 12px;
-    padding: 1.5rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
-    animation: pulseBanner 4s infinite;
-  ">
-    <h3 style="font-size: 2rem; font-family: 'Poppins', sans-serif; color: #003366; font-weight: 700; margin-bottom: 1rem;">
+  <div id="formBanner">
+    <h3>
       📩 Попълни формата и вземи своята оферта още днес!<br/>
       📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
     </h3>
-    <p style="font-size: 1.1rem; color: #222;">
+    <p>
       💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική
     </p>
   </div>
 
-  <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"
-    style="border:none; width:100%; min-height:700px;"
-    title="Форма за оферта"></iframe>
+  <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"></iframe>
 
   <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
     🔒 <a href="privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
