--- a/prices.html
+++ b/prices.html
@@ -57,7 +57,7 @@ a.back-home:hover {
 
 @keyframes pulseBanner {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
-  50% { transform: scale(1.02); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
+  50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
   100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
 }
 
@@ -94,7 +94,7 @@ a.back-home:hover {
 }
 
 #formBanner h3 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-family: 'Poppins', sans-serif;
   color: #003366;
   font-weight: 700;
@@ -136,6 +136,36 @@ a.back-home:hover {
   #scrollingText {
     animation: scrollTextMobile 10s linear infinite;
     white-space: normal;
+  }
+
+  #loadingBanner { 
+    font-size: 1rem;
+    padding: 0.9rem 0;
+  }
+
+  #formBanner h3 {
+    font-size: 1.4rem;
+    line-height: 1.4;
+  }
+
+  #formBanner p {
+    font-size: 1rem;
+  }
+
+  .section-title {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  input, textarea, button {
+    font-size: 1rem;
+    padding: 0.8rem;
+    width: 100%;
+  }
+
+  .back-home {
+    font-size: 1rem;
+    padding: 0.7rem 1.5rem;
   }
 }
 </style>
