--- a/prices.html
+++ b/prices.html
@@ -180,7 +180,7 @@ a.back-home:hover {
 
   <div id="loadingBanner">
     <div id="scrollingText" aria-live="polite">
-      Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές! — Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές!
+      Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές! — Доверете се на опита! — Εμπιστευτείτε την εμπειρία μας!
     </div>
   </div>
 
