--- a/prices.html
+++ b/prices.html
@@ -1,9 +1,10 @@
 
 <!DOCTYPE html>
+
 <html lang="bg">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Цени / Τιμές</title>
 <style>
 body {
@@ -168,43 +169,44 @@ a.back-home:hover {
     padding: 0.7rem 1.5rem;
   }
 }
-</style>
+
+    #formBanner, #loadingBanner {
+        border-width: 2px;
+        border-style: solid;
+        border-color: #0055a5;
+    }
+    </style>
 </head>
 <body>
 <section id="prices">
-  <h2 class="section-title">Цени / Τιμές</h2>
-  <p style="text-align: justify;">
-    <em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
-    <em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
-  </p>
-
-  <div id="loadingBanner">
-    <div id="scrollingText" aria-live="polite">
+<h2 class="section-title">Цени / Τιμές</h2>
+<p style="text-align: justify;">
+<em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
+<em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
+</p>
+<div id="loadingBanner">
+<div aria-live="polite" id="scrollingText">
       Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές! — Доверете се на опита! — Εμπιστευτείτε την εμπειρία μας!
     </div>
-  </div>
-
-  <div id="formBanner">
-    <h3>
+</div>
+<div id="formBanner">
+<h3>
       📩 Попълни формата и вземи своята оферта още днес!<br/>
       📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
     </h3>
-    <p>
+<p>
       💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική
     </p>
-  </div>
-
-  <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"></iframe>
-
-  <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+</div>
+<iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"></iframe>
+<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
     🔒 <a href="privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
       Политика за поверителност / Πολιτική απορρήτου
     </a>
-  </div>
-
-  <div style="text-align: center; margin-top: 2rem;">
-    <a href="index.html" class="back-home">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
-  </div>
+</div>
+<div style="text-align: center; margin-top: 2rem;">
+<a class="back-home" href="index.html">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
+</div>
 </section>
 </body>
 </html>
