--- a/prices.html
+++ b/prices.html
@@ -1,6 +1,4 @@
-
 <!DOCTYPE html>
-
 <html lang="bg">
 <head>
 <meta charset="utf-8"/>
@@ -14,52 +12,21 @@ body {
   background: linear-gradient(to bottom, #fff, #f0f8ff);
   color: #333;
 }
+
 section {
-  padding: 2rem;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 2rem 1rem;
   background-color: white;
-  margin: 1rem;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 0 auto;
 }
+
 .section-title {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  text-align: center;
   color: #003366;
-}
-a.back-home {
-  background-color: #003366;
-  color: white;
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  text-decoration: none;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.1rem;
-  font-weight: 600;
-  display: inline-block;
-  transition: background-color 0.3s ease;
-}
-a.back-home:hover {
-  background-color: #0055a5;
-}
-
-:root {
-  --scroll-duration: 30s;
-}
-
-@keyframes scrollTextDesktop {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
-}
-
-@keyframes scrollTextMobile {
-  0% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
-}
-
-@keyframes pulseBanner {
-  0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
-  50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
-  100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
 }
 
 #loadingBanner {
@@ -73,14 +40,13 @@ a.back-home:hover {
   border-radius: 12px;
   margin-bottom: 1rem;
   overflow: hidden;
-  position: relative;
   animation: pulseBanner 4s infinite;
 }
 
 #scrollingText {
   white-space: nowrap;
   display: inline-block;
-  animation: scrollTextDesktop var(--scroll-duration) linear infinite;
+  animation: scrollTextDesktop 30s linear infinite;
 }
 
 #formBanner {
@@ -107,39 +73,63 @@ a.back-home:hover {
   color: #222;
 }
 
-#offerForm {
+iframe {
   border: none;
   width: 100%;
-  min-height: 700px;
+  height: 700px;
+  border-radius: 10px;
+}
+
+a.back-home {
+  background-color: #003366;
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1rem;
+  font-weight: 600;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  margin-top: 1rem;
+}
+
+a.back-home:hover {
+  background-color: #0055a5;
+}
+
+@keyframes scrollTextDesktop {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
+
+@keyframes pulseBanner {
+  0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
+  50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
+  100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
 }
 
 @media (max-width: 768px) {
-  section {
-    margin: 0;
-    padding: 1.5rem;
+  body {
+    padding: 0;
+    font-size: 1.1rem;
+    line-height: 1.6;
   }
 
-  #prices {
+  section {
+    padding: 1.5rem 15px;
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
+
+  #loadingBanner, #formBanner, iframe, .back-home {
     width: 100%;
     max-width: 100%;
+    box-sizing: border-box;
   }
 
-  #formBanner {
-    padding: 1rem;
-    width: 100%;
-  }
-
-  #offerForm {
-    min-height: 600px;
-    width: 100%;
-  }
-
-  #scrollingText {
-    animation: scrollTextMobile 10s linear infinite;
-    white-space: normal;
-  }
-
-  #loadingBanner { 
+  #loadingBanner {
     font-size: 1rem;
     padding: 0.9rem 0;
   }
@@ -155,69 +145,45 @@ a.back-home:hover {
 
   .section-title {
     font-size: 1.6rem;
-    text-align: center;
   }
 
-  input, textarea, button {
+  a.back-home {
     font-size: 1rem;
-    padding: 0.8rem;
-    width: 100%;
+    padding: 0.8rem 1.5rem;
   }
-
-  .back-home {
-    font-size: 1rem;
-    padding: 0.7rem 1.5rem;
-  }
-}
-
-#formBanner, #loadingBanner {
-    border-width: 2px;
-    border-style: solid;
-    border-color: #0055a5;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-#formBanner h3, #loadingBanner {
-    width: 100%;
-}
-
-#formBanner, #loadingBanner {
-    margin: 0 auto;
-    max-width: 100%;
 }
 </style>
 </head>
 <body>
 <section id="prices">
-<h2 class="section-title">Цени / Τιμές</h2>
-<p style="text-align: justify;">
-<em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
-<em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
-</p>
-<div id="loadingBanner">
-<div aria-live="polite" id="scrollingText">
+  <h2 class="section-title">Цени / Τιμές</h2>
+  <p style="text-align: justify;">
+    <em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
+    <em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
+  </p>
+
+  <div id="loadingBanner">
+    <div id="scrollingText">
       Гарантирано, най-добрите цени! — Εγγυημένα, οι καλύτερες τιμές! — Доверете се на опита! — Εμπιστευτείτε την εμπειρία μας!
     </div>
-</div>
-<div id="formBanner">
-<h3>
-      📩 Попълни формата и вземи своята оферта още днес!<br/>
-      📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
-    </h3>
-<p>
-      💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική
-    </p>
-</div>
-<iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus"></iframe>
-<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+  </div>
+
+  <div id="formBanner">
+    <h3>📩 Попълни формата и вземи своята оферта още днес!<br/>📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
+    <p>💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική</p>
+  </div>
+
+  <iframe id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus" title="Форма за оферта"></iframe>
+
+  <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
     🔒 <a href="privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
       Политика за поверителност / Πολιτική απορρήτου
     </a>
-</div>
-<div style="text-align: center; margin-top: 2rem;">
-<a class="back-home" href="index.html">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
-</div>
+  </div>
+
+  <div style="text-align: center; margin-top: 2rem;">
+    <a class="back-home" href="index.html">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
+  </div>
 </section>
 </body>
 </html>
